[package]
name = "crosis"
version = "0.3.1"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["builtin_connection_metadata"]
builtin_connection_metadata = ["dep:reqwest","serde"]
serde = ["dep:serde", "dep:serde_json"]
chan_buf = []

[dependencies]
prost = "0.11.8"
prost-types = "0.11.8"
thiserror = "1.0.52"
readonly = "0.2.11"
reqwest = { version = "0.11.23", features= ["json"], optional=true }
serde = { version = "1.0.193", features = ["derive"], optional = true }
serde_json = { version = "1.0.108", optional = true }
tokio = { version = "1.35.1", features = ["time", "sync", "rt", "macros"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"]}
url = "2.5.0"
futures-util = "0.3.30"
fastrand = "2.0.1"
async-trait = "0.1.76"

[build-dependencies]
prost-build = "0.11.8"
